GrammarParser.java
// Generated from Grammar.g4 by ANTLR 4.9.3
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class GrammarParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.9.3", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, RETURN=2, IF=3, THEN=4, ELSE=5, WHILE=6, SC=7, COMMA=8, LParen=9, 
		RParen=10, LCurBracket=11, RCurBracket=12, LBracket=13, RBracket=14, DCIS=15, 
		KCIS=16, BOOL=17, CHAR=18, STR=19, TRUE=20, FALSE=21, ASSIGN=22, AND=23, 
		OR=24, ADD=25, SUB=26, MUL=27, DIV=28, SQR=29, NEG=30, EQ=31, NEQ=32, 
		LEQ=33, GEQ=34, LT=35, GT=36, ID=37, NUM=38, CHARACTER=39, STRING=40, 
		WS=41, NL=42, BlockComment=43;
	public static final int
		RULE_init = 0, RULE_stat = 1, RULE_procDef = 2, RULE_body = 3, RULE_statbody = 4, 
		RULE_internalbody = 5, RULE_elsebody = 6, RULE_logicalExpr = 7, RULE_expr = 8, 
		RULE_term = 9, RULE_factor = 10, RULE_power = 11, RULE_params = 12, RULE_defParams = 13, 
		RULE_functionDef = 14, RULE_varType = 15;
	private static String[] makeRuleNames() {
		return new String[] {
			"init", "stat", "procDef", "body", "statbody", "internalbody", "elsebody", 
			"logicalExpr", "expr", "term", "factor", "power", "params", "defParams", 
			"functionDef", "varType"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'funkcia'", "'vrat'", "'ak'", "'tak'", "'inak'", "'kym'", "';'", 
			"','", "'('", "')'", "'{'", "'}'", "'['", "']'", "'dcis'", "'kcis'", 
			"'ph'", "'znak'", "'retaz'", "'prauda'", "'loz'", "'='", "'&'", "'|'", 
			"'+'", "'-'", "'*'", "'/'", "'^'", "'!'", "'=='", "'!='", "'<='", "'>='", 
			"'>'", "'<'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, "RETURN", "IF", "THEN", "ELSE", "WHILE", "SC", "COMMA", "LParen", 
			"RParen", "LCurBracket", "RCurBracket", "LBracket", "RBracket", "DCIS", 
			"KCIS", "BOOL", "CHAR", "STR", "TRUE", "FALSE", "ASSIGN", "AND", "OR", 
			"ADD", "SUB", "MUL", "DIV", "SQR", "NEG", "EQ", "NEQ", "LEQ", "GEQ", 
			"LT", "GT", "ID", "NUM", "CHARACTER", "STRING", "WS", "NL", "BlockComment"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Grammar.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public GrammarParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class InitContext extends ParserRuleContext {
		public StatContext stat() {
			return getRuleContext(StatContext.class,0);
		}
		public TerminalNode EOF() { return getToken(GrammarParser.EOF, 0); }
		public InitContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_init; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarListener ) ((GrammarListener)listener).enterInit(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarListener ) ((GrammarListener)listener).exitInit(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GrammarVisitor ) return ((GrammarVisitor<? extends T>)visitor).visitInit(this);
			else return visitor.visitChildren(this);
		}
	}

	public final InitContext init() throws RecognitionException {
		InitContext _localctx = new InitContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_init);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(32);
			stat();
			setState(33);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StatContext extends ParserRuleContext {
		public List<ProcDefContext> procDef() {
			return getRuleContexts(ProcDefContext.class);
		}
		public ProcDefContext procDef(int i) {
			return getRuleContext(ProcDefContext.class,i);
		}
		public List<BodyContext> body() {
			return getRuleContexts(BodyContext.class);
		}
		public BodyContext body(int i) {
			return getRuleContext(BodyContext.class,i);
		}
		public StatContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_stat; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarListener ) ((GrammarListener)listener).enterStat(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarListener ) ((GrammarListener)listener).exitStat(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GrammarVisitor ) return ((GrammarVisitor<? extends T>)visitor).visitStat(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StatContext stat() throws RecognitionException {
		StatContext _localctx = new StatContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_stat);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(39);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__0) | (1L << RETURN) | (1L << IF) | (1L << WHILE) | (1L << LParen) | (1L << DCIS) | (1L << KCIS) | (1L << BOOL) | (1L << CHAR) | (1L << STR) | (1L << SUB) | (1L << ID) | (1L << NUM) | (1L << CHARACTER) | (1L << STRING))) != 0)) {
				{
				setState(37);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case T__0:
					{
					setState(35);
					procDef();
					}
					break;
				case RETURN:
				case IF:
				case WHILE:
				case LParen:
				case DCIS:
				case KCIS:
				case BOOL:
				case CHAR:
				case STR:
				case SUB:
				case ID:
				case NUM:
				case CHARACTER:
				case STRING:
					{
					setState(36);
					body();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				setState(41);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ProcDefContext extends ParserRuleContext {
		public FunctionDefContext functionDef() {
			return getRuleContext(FunctionDefContext.class,0);
		}
		public VarTypeContext varType() {
			return getRuleContext(VarTypeContext.class,0);
		}
		public TerminalNode ID() { return getToken(GrammarParser.ID, 0); }
		public TerminalNode LParen() { return getToken(GrammarParser.LParen, 0); }
		public DefParamsContext defParams() {
			return getRuleContext(DefParamsContext.class,0);
		}
		public TerminalNode RParen() { return getToken(GrammarParser.RParen, 0); }
		public TerminalNode LCurBracket() { return getToken(GrammarParser.LCurBracket, 0); }
		public TerminalNode RCurBracket() { return getToken(GrammarParser.RCurBracket, 0); }
		public TerminalNode SC() { return getToken(GrammarParser.SC, 0); }
		public List<BodyContext> body() {
			return getRuleContexts(BodyContext.class);
		}
		public BodyContext body(int i) {
			return getRuleContext(BodyContext.class,i);
		}
		public ProcDefContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_procDef; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarListener ) ((GrammarListener)listener).enterProcDef(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarListener ) ((GrammarListener)listener).exitProcDef(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GrammarVisitor ) return ((GrammarVisitor<? extends T>)visitor).visitProcDef(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProcDefContext procDef() throws RecognitionException {
		ProcDefContext _localctx = new ProcDefContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_procDef);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(42);
			functionDef();
			setState(43);
			varType();
			setState(44);
			match(ID);
			setState(45);
			match(LParen);
			setState(46);
			defParams();
			setState(47);
			match(RParen);
			setState(48);
			match(LCurBracket);
			setState(52);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << RETURN) | (1L << IF) | (1L << WHILE) | (1L << LParen) | (1L << DCIS) | (1L << KCIS) | (1L << BOOL) | (1L << CHAR) | (1L << STR) | (1L << SUB) | (1L << ID) | (1L << NUM) | (1L << CHARACTER) | (1L << STRING))) != 0)) {
				{
				{
				setState(49);
				body();
				}
				}
				setState(54);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(55);
			match(RCurBracket);
			setState(56);
			match(SC);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class BodyContext extends ParserRuleContext {
		public StatbodyContext statbody() {
			return getRuleContext(StatbodyContext.class,0);
		}
		public BodyContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_body; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarListener ) ((GrammarListener)listener).enterBody(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarListener ) ((GrammarListener)listener).exitBody(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GrammarVisitor ) return ((GrammarVisitor<? extends T>)visitor).visitBody(this);
			else return visitor.visitChildren(this);
		}
	}

	public final BodyContext body() throws RecognitionException {
		BodyContext _localctx = new BodyContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_body);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(58);
			statbody();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StatbodyContext extends ParserRuleContext {
		public StatbodyContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statbody; }
	 
		public StatbodyContext() { }
		public void copyFrom(StatbodyContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class ArrayAssignContext extends StatbodyContext {
		public TerminalNode ID() { return getToken(GrammarParser.ID, 0); }
		public TerminalNode LBracket() { return getToken(GrammarParser.LBracket, 0); }
		public List<ExprContext> expr() {
			return getRuleContexts(ExprContext.class);
		}
		public ExprContext expr(int i) {
			return getRuleContext(ExprContext.class,i);
		}
		public TerminalNode RBracket() { return getToken(GrammarParser.RBracket, 0); }
		public TerminalNode ASSIGN() { return getToken(GrammarParser.ASSIGN, 0); }
		public TerminalNode SC() { return getToken(GrammarParser.SC, 0); }
		public ArrayAssignContext(StatbodyContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarListener ) ((GrammarListener)listener).enterArrayAssign(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarListener ) ((GrammarListener)listener).exitArrayAssign(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GrammarVisitor ) return ((GrammarVisitor<? extends T>)visitor).visitArrayAssign(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class VarDefContext extends StatbodyContext {
		public VarTypeContext varType() {
			return getRuleContext(VarTypeContext.class,0);
		}
		public TerminalNode ID() { return getToken(GrammarParser.ID, 0); }
		public TerminalNode SC() { return getToken(GrammarParser.SC, 0); }
		public VarDefContext(StatbodyContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarListener ) ((GrammarListener)listener).enterVarDef(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarListener ) ((GrammarListener)listener).exitVarDef(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GrammarVisitor ) return ((GrammarVisitor<? extends T>)visitor).visitVarDef(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class ArrayDefContext extends StatbodyContext {
		public VarTypeContext varType() {
			return getRuleContext(VarTypeContext.class,0);
		}
		public TerminalNode ID() { return getToken(GrammarParser.ID, 0); }
		public TerminalNode LBracket() { return getToken(GrammarParser.LBracket, 0); }
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public TerminalNode RBracket() { return getToken(GrammarParser.RBracket, 0); }
		public TerminalNode SC() { return getToken(GrammarParser.SC, 0); }
		public ArrayDefContext(StatbodyContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarListener ) ((GrammarListener)listener).enterArrayDef(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarListener ) ((GrammarListener)listener).exitArrayDef(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GrammarVisitor ) return ((GrammarVisitor<? extends T>)visitor).visitArrayDef(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class WhileContext extends StatbodyContext {
		public TerminalNode WHILE() { return getToken(GrammarParser.WHILE, 0); }
		public TerminalNode LParen() { return getToken(GrammarParser.LParen, 0); }
		public LogicalExprContext logicalExpr() {
			return getRuleContext(LogicalExprContext.class,0);
		}
		public TerminalNode RParen() { return getToken(GrammarParser.RParen, 0); }
		public TerminalNode LCurBracket() { return getToken(GrammarParser.LCurBracket, 0); }
		public InternalbodyContext internalbody() {
			return getRuleContext(InternalbodyContext.class,0);
		}
		public TerminalNode RCurBracket() { return getToken(GrammarParser.RCurBracket, 0); }
		public WhileContext(StatbodyContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarListener ) ((GrammarListener)listener).enterWhile(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarListener ) ((GrammarListener)listener).exitWhile(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GrammarVisitor ) return ((GrammarVisitor<? extends T>)visitor).visitWhile(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class IfContext extends StatbodyContext {
		public TerminalNode IF() { return getToken(GrammarParser.IF, 0); }
		public TerminalNode LParen() { return getToken(GrammarParser.LParen, 0); }
		public LogicalExprContext logicalExpr() {
			return getRuleContext(LogicalExprContext.class,0);
		}
		public TerminalNode RParen() { return getToken(GrammarParser.RParen, 0); }
		public TerminalNode THEN() { return getToken(GrammarParser.THEN, 0); }
		public TerminalNode LCurBracket() { return getToken(GrammarParser.LCurBracket, 0); }
		public InternalbodyContext internalbody() {
			return getRuleContext(InternalbodyContext.class,0);
		}
		public TerminalNode RCurBracket() { return getToken(GrammarParser.RCurBracket, 0); }
		public ElsebodyContext elsebody() {
			return getRuleContext(ElsebodyContext.class,0);
		}
		public IfContext(StatbodyContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarListener ) ((GrammarListener)listener).enterIf(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarListener ) ((GrammarListener)listener).exitIf(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GrammarVisitor ) return ((GrammarVisitor<? extends T>)visitor).visitIf(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class VarAssignContext extends StatbodyContext {
		public TerminalNode ID() { return getToken(GrammarParser.ID, 0); }
		public TerminalNode ASSIGN() { return getToken(GrammarParser.ASSIGN, 0); }
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public TerminalNode SC() { return getToken(GrammarParser.SC, 0); }
		public VarAssignContext(StatbodyContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarListener ) ((GrammarListener)listener).enterVarAssign(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarListener ) ((GrammarListener)listener).exitVarAssign(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GrammarVisitor ) return ((GrammarVisitor<? extends T>)visitor).visitVarAssign(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class ReturnContext extends StatbodyContext {
		public TerminalNode RETURN() { return getToken(GrammarParser.RETURN, 0); }
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public TerminalNode SC() { return getToken(GrammarParser.SC, 0); }
		public ReturnContext(StatbodyContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarListener ) ((GrammarListener)listener).enterReturn(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarListener ) ((GrammarListener)listener).exitReturn(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GrammarVisitor ) return ((GrammarVisitor<? extends T>)visitor).visitReturn(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class DirectExprContext extends StatbodyContext {
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public TerminalNode SC() { return getToken(GrammarParser.SC, 0); }
		public DirectExprContext(StatbodyContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarListener ) ((GrammarListener)listener).enterDirectExpr(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarListener ) ((GrammarListener)listener).exitDirectExpr(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GrammarVisitor ) return ((GrammarVisitor<? extends T>)visitor).visitDirectExpr(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StatbodyContext statbody() throws RecognitionException {
		StatbodyContext _localctx = new StatbodyContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_statbody);
		int _la;
		try {
			setState(110);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,4,_ctx) ) {
			case 1:
				_localctx = new IfContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(60);
				match(IF);
				setState(61);
				match(LParen);
				setState(62);
				logicalExpr(0);
				setState(63);
				match(RParen);
				setState(64);
				match(THEN);
				setState(65);
				match(LCurBracket);
				setState(66);
				internalbody();
				setState(67);
				match(RCurBracket);
				setState(69);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==ELSE) {
					{
					setState(68);
					elsebody();
					}
				}

				}
				break;
			case 2:
				_localctx = new WhileContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(71);
				match(WHILE);
				setState(72);
				match(LParen);
				setState(73);
				logicalExpr(0);
				setState(74);
				match(RParen);
				setState(75);
				match(LCurBracket);
				setState(76);
				internalbody();
				setState(77);
				match(RCurBracket);
				}
				break;
			case 3:
				_localctx = new ArrayDefContext(_localctx);
				enterOuterAlt(_localctx, 3);
				{
				setState(79);
				varType();
				setState(80);
				match(ID);
				setState(81);
				match(LBracket);
				setState(82);
				expr(0);
				setState(83);
				match(RBracket);
				setState(84);
				match(SC);
				}
				break;
			case 4:
				_localctx = new VarDefContext(_localctx);
				enterOuterAlt(_localctx, 4);
				{
				setState(86);
				varType();
				setState(87);
				match(ID);
				setState(88);
				match(SC);
				}
				break;
			case 5:
				_localctx = new ArrayAssignContext(_localctx);
				enterOuterAlt(_localctx, 5);
				{
				setState(90);
				match(ID);
				setState(91);
				match(LBracket);
				setState(92);
				expr(0);
				setState(93);
				match(RBracket);
				setState(94);
				match(ASSIGN);
				setState(95);
				expr(0);
				setState(96);
				match(SC);
				}
				break;
			case 6:
				_localctx = new VarAssignContext(_localctx);
				enterOuterAlt(_localctx, 6);
				{
				setState(98);
				match(ID);
				setState(99);
				match(ASSIGN);
				setState(100);
				expr(0);
				setState(101);
				match(SC);
				}
				break;
			case 7:
				_localctx = new ReturnContext(_localctx);
				enterOuterAlt(_localctx, 7);
				{
				setState(103);
				match(RETURN);
				setState(104);
				expr(0);
				setState(105);
				match(SC);
				}
				break;
			case 8:
				_localctx = new DirectExprContext(_localctx);
				enterOuterAlt(_localctx, 8);
				{
				setState(107);
				expr(0);
				setState(108);
				match(SC);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class InternalbodyContext extends ParserRuleContext {
		public List<BodyContext> body() {
			return getRuleContexts(BodyContext.class);
		}
		public BodyContext body(int i) {
			return getRuleContext(BodyContext.class,i);
		}
		public InternalbodyContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_internalbody; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarListener ) ((GrammarListener)listener).enterInternalbody(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarListener ) ((GrammarListener)listener).exitInternalbody(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GrammarVisitor ) return ((GrammarVisitor<? extends T>)visitor).visitInternalbody(this);
			else return visitor.visitChildren(this);
		}
	}

	public final InternalbodyContext internalbody() throws RecognitionException {
		InternalbodyContext _localctx = new InternalbodyContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_internalbody);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(115);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << RETURN) | (1L << IF) | (1L << WHILE) | (1L << LParen) | (1L << DCIS) | (1L << KCIS) | (1L << BOOL) | (1L << CHAR) | (1L << STR) | (1L << SUB) | (1L << ID) | (1L << NUM) | (1L << CHARACTER) | (1L << STRING))) != 0)) {
				{
				{
				setState(112);
				body();
				}
				}
				setState(117);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ElsebodyContext extends ParserRuleContext {
		public TerminalNode ELSE() { return getToken(GrammarParser.ELSE, 0); }
		public TerminalNode LCurBracket() { return getToken(GrammarParser.LCurBracket, 0); }
		public InternalbodyContext internalbody() {
			return getRuleContext(InternalbodyContext.class,0);
		}
		public TerminalNode RCurBracket() { return getToken(GrammarParser.RCurBracket, 0); }
		public ElsebodyContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_elsebody; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarListener ) ((GrammarListener)listener).enterElsebody(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarListener ) ((GrammarListener)listener).exitElsebody(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GrammarVisitor ) return ((GrammarVisitor<? extends T>)visitor).visitElsebody(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ElsebodyContext elsebody() throws RecognitionException {
		ElsebodyContext _localctx = new ElsebodyContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_elsebody);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(118);
			match(ELSE);
			setState(119);
			match(LCurBracket);
			setState(120);
			internalbody();
			setState(121);
			match(RCurBracket);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class LogicalExprContext extends ParserRuleContext {
		public LogicalExprContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_logicalExpr; }
	 
		public LogicalExprContext() { }
		public void copyFrom(LogicalExprContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class NegationContext extends LogicalExprContext {
		public TerminalNode NEG() { return getToken(GrammarParser.NEG, 0); }
		public LogicalExprContext logicalExpr() {
			return getRuleContext(LogicalExprContext.class,0);
		}
		public NegationContext(LogicalExprContext ctx) { copyFrom(ctx); }
		@Override
